--- a/404.md
+++ b/404.md
@@ -1,11 +1,11 @@
 ---
-layout: layouts/home.njk
+layout: layouts/content-sidebar.njk
 permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
 # Content not found.
 
-Go <a href="{{ '/' | url }}">home</a>.
+Check the <a href="{{ '/posts/' | url }}">archive</a>.
 
 {#
 Read more: https://www.11ty.dev/docs/quicktips/not-found/
