fixed name of meetup location

--- a/dh2024.md
+++ b/dh2024.md
@@ -35,7 +35,7 @@ From August 6 till 9, 2024 several e-editiones members will join the annual conf
 
 #### e-editiones / TEI Publisher Get Together
 * When: **Wednesday 7th of August 7:00 PM – 9:30 PM EST**
-* Where: [ROCKLANDS](https://rocklands.com/locations/arlington-va/) - souther style cusine - at [3471 Washington Blvd. Arlington, VA 22201](https://maps.app.goo.gl/VqqA6XEUmabFegHD9).
+* Where: [Rocklands BBQ](https://rocklands.com/locations/arlington-va/) - souther style cusine - at [3471 Washington Blvd. Arlington, VA 22201](https://maps.app.goo.gl/VqqA6XEUmabFegHD9).
 
 Everyone is invited to join, you don't need to be a conference participant
 
