enhanced dh2024 page

--- a/dh2024.md
+++ b/dh2024.md
@@ -10,18 +10,18 @@ tags:
     - e-editiones
 --- 
 
-From August 6 till 9, 2024 several e-editiones members will join the annual conference of the Alliance of Digital Humanities Organizations: [DH2024 - Reinvention & Responsibility](https://dh2024.adho.org/) at Washington, D.C., USA. 
+From August 6 till 9, 2024 several e-editiones members will join the annual conference of the Alliance of Digital Humanities Organizations: [DH2024 - Reinvention & Responsibility](https://dh2024.adho.org/) at Washington, D.C., 🇺🇸. 
 
-### List of TEI Publisher related talks, posters and events around DH2024
+### 📋 List of TEI Publisher related talks, posters and events around DH2024
 
-#### From a publishing tool to a virtual research environment: producing scholarly editions with TEl Publisher
+#### 🎤 From a publishing tool to a virtual research environment: producing scholarly editions with TEl Publisher 
 * When: **Wednesday 7th of August 10:30 EST**
 * Who: Wolfgang Meier, Joseph C Wicentowski, Magdalena Turska, Helena Bermudez Sabel
 * What: Presentation
 * Where: Van Metre Hall 308
 * [Whova Link](https://whova.com/portal/webapp/dh_202407/Agenda/3915869)
 
-#### Poster Session I 
+#### 🏞️ Poster Session I 
 * When: **Wednesday 7th of August 6:00 PM – 7:30 PM EST**
 * Where: Van Metre Hall 125
 
@@ -33,17 +33,19 @@ From August 6 till 9, 2024 several e-editiones members will join the annual conf
 * Who: Iwona Grabska-Gradzinska, Grażyna Urban-Godziek
 * [Whova Link](https://whova.com/portal/webapp/dh_202407/Artifact/108318)
 
-#### e-editiones / TEI Publisher Get Together
+#### 🥳+🍔 Public e-editiones / TEI Publisher Get Together at Rocklands BBQ
 * When: **Wednesday 7th of August 7:00 PM – 9:30 PM EST**
 * Where: [Rocklands BBQ](https://rocklands.com/locations/arlington-va/) - souther style cusine - at [3471 Washington Blvd. Arlington, VA 22201](https://maps.app.goo.gl/VqqA6XEUmabFegHD9).
 
-Everyone is invited to join, you don't need to be a conference participant
+🚀 Are you a TEI Publisher user who wants to connect with other users? Do you wanna know more about e-editiones and meet some of our members in person? Then join us for the Get-Together Wednesday evening.
 
-#### Poster Session II -  Reinvention, Responsibility & Resurrection: how to future-proof an edition
+💡 Whether you're a beginner or an expert, this event is the perfect opportunity to exchange tips & tricks an get to know each other. You don't need to be a DH2024 participant to join and no registration is required. Just come by. Its only 6 minutes by foot away from the DH2024 venue.
+
+#### 🏞️ Poster Session II -  Reinvention, Responsibility & Resurrection: how to future-proof an edition
 * When: **Friday 9th of August 2:00 PM - 3:30 PM EST**
 * Who: Magdalena Turska, Helena Bermudez Sabel
 * Where: Van Metre Hall 125
 * [Whova Link](https://whova.com/portal/webapp/dh_202407/Artifact/108353)
 
-### Editions with Future 
+### 📓 Editions with Future 
 Read more about [e-editiones and TEI Publisher](/join).
