added links to events on Whova and LinkedIn for TP Get-Together

--- a/dh2024.md
+++ b/dh2024.md
@@ -36,6 +36,7 @@ From August 6 till 9, 2024 several e-editiones members will join the annual conf
 #### 🥳+🍔 Public e-editiones / TEI Publisher Get Together at Rocklands BBQ
 * When: **Wednesday 7th of August 7:00 PM – 9:30 PM EST**
 * Where: [Rocklands BBQ](https://rocklands.com/locations/arlington-va/) - souther style cusine - at [3471 Washington Blvd. Arlington, VA 22201](https://maps.app.goo.gl/VqqA6XEUmabFegHD9).
+* Event on [Whova](https://whova.com/portal/webapp/dh_202407/CommunityBoard/topic/2122044/23825496/) and [LinkedIn](https://www.linkedin.com/events/publice-editiones-teipublisherg7226237273892093955/about/)
 
 🚀 Are you a TEI Publisher user who wants to connect with other users? Do you wanna know more about e-editiones and meet some of our members in person? Then join us for the Get-Together Wednesday evening.
 
