added reinvetion-2024 post

--- a/posts/dh2024.md
+++ b/posts/dh2024.md
@@ -5,9 +5,10 @@ lead: "several e-editiones members will join the DH2024 - Reinvention & Responsi
 date: 2024-08-06
 author: Lars Windauer
 tags:
-  - events
   - conference
+  - DH2024
   - tei-publisher
+  - e-editiones
 coverImage: /img/dh24-eeditiones-flyer-cover-image.jpg
 coverImageCredits: Cover image by Juri Leino and ChatGPT
 
