prepared dh2024 aftermath page

--- a/dh2024.md
+++ b/dh2024.md
@@ -1,52 +1,60 @@
 ---
 layout: layouts/content-sidebar-flyer.njk
-title: "e-editiones at DH2024"
+title: "e-editiones after DH2024"
 short: "dh2024"
 lead: 
 author: Lars Windauer
 date: 2024-08-02
 tags:
     - announcements
+    - conference
     - e-editiones
 --- 
 
-From August 6 till 9, 2024 several e-editiones members will join the annual conference of the Alliance of Digital Humanities Organizations: [DH2024 - Reinvention & Responsibility](https://dh2024.adho.org/) at Washington, D.C., 🇺🇸. 
+From August 6 till 9, 2024 several e-editiones members joined the annual conference of the Alliance of Digital Humanities Organizations: [DH2024 - Reinvention & Responsibility](https://dh2024.adho.org/) at Washington, D.C., 🇺🇸. Below you find the posters and presentation our members contributed to the conference. 
 
-### 📋 List of TEI Publisher related talks, posters and events around DH2024
+##### 🎤 From a publishing tool to a virtual research environment: producing scholarly editions with TEl Publisher 
+*Joseph C Wicentowski, Magdalena Turska, Helena Bermudez Sabel, Wolfgang Meier*
 
-#### 🎤 From a publishing tool to a virtual research environment: producing scholarly editions with TEl Publisher 
-* When: **Wednesday 7th of August 10:30 EST**
-* Who: Wolfgang Meier, Joseph C Wicentowski, Magdalena Turska, Helena Bermudez Sabel
-* What: Presentation
-* Where: Van Metre Hall 308
-* [Whova Link](https://whova.com/portal/webapp/dh_202407/Agenda/3915869)
+> TEI Publisher provides the means for data storage, modelling, curation, analysis and visualisation while enabling collaborative work. The recent additions to it include form-based editing for metadata and curation of authority files as well as NER support, including training the model and visual editor for adding semantic markup.
 
-#### 🏞️ Poster Session I 
-* When: **Wednesday 7th of August 6:00 PM – 7:30 PM EST**
-* Where: Van Metre Hall 125
+Currently we cann offer only the [presentation](https://prezi.com/view/oNGhA5fu4Nvpp3uiKC5o/). Due to a [technical glitch](https://social.e-editiones.org/@eeditiones/112921400019070395) there is no recording of this talk. We will have the talk again in one of our upcoming remote e-editiones [community meetings](/pages/community-meetings/). Subscribe to our [mailing list](https://www.e-editiones.org/pages/get-in-touch#mailing-list), join our [Slack organisation](https://www.e-editiones.org/pages/get-in-touch#slack-community), follow us on [LinkedIn](https://www.linkedin.com/company/e-editiones), [Mastodon](https://social.e-editiones.org/@eeditiones) or [Twitter](https://x.com/eeditiones) to be notified the date / time. 
 
-##### Publishing Process for Digital Scholarly Editing: Jagiellonian Digital Platform 
-* Who: Joanna Katarzyna Hałackiewicz,  Iwona Grabska-Gradzinska, Magdalena Eulalia Komorowska, Magdalena Turska
-* [Whova Link](https://whova.com/portal/webapp/dh_202407/Artifact/107777)
 
-##### New Generation of Electronic Edition for Neo-Latin Literature – Rescue from Oblivion, Stage Two
-* Who: Iwona Grabska-Gradzinska, Grażyna Urban-Godziek
-* [Whova Link](https://whova.com/portal/webapp/dh_202407/Artifact/108318)
+##### 🏞️ Poster Session I 
+
+###### Publishing Process for Digital Scholarly Editing: Jagiellonian Digital Platform 
+*Joanna Katarzyna Hałackiewicz,  Iwona Grabska-Gradzinska, Magdalena Eulalia Komorowska, Magdalena Turska* 
+<style>
+td, th {
+   border: none!important;
+   text-align:left;
+   vertical-align: top;
+}
+</style>
+
+| | |
+| ------------ | ------------- |
+| Jagiellonian Digital Platform brings together scholars and IT developers in order to create a supportive environment for interoperable, accessible and sustainable digital scholarly editions. We want to assist scholarly editors in creating new paths into textual analysis and representation, which they might not envision alone. | <div class="download-flyer"> <a href='/assets/files/DH2024-Jagiellonian-Digital-Platform.pdf'> <img src='../img/DH2024-Jagiellonian-Digital-Platform.jpg' width='100%'> <div>Download</div> </a></div>  |
+
+
+
+###### New Generation of Electronic Edition for Neo-Latin Literature – Rescue from Oblivion, Stage Two
+*Iwona Grabska-Gradzinska, Grażyna Urban-Godziek* 
+| | |
+| ------------ | ------------- |
+| A new version of NEOLATINA, a repository of critical editions of Latin texts created by Old-Polish authors. We transfer data from an old (2011) database to the new, based on TEI Publisher, which enables comparing language versions, searching for similarities for linguistic commentary and comparing original, translation and facsimile. | <div class="download-flyer"> <a href='/assets/files/DH2024-Rescue-from-Oblivion.pdf'> <img src='../img/DH2024-Rescue-from-Oblivion.jpg' width='100%'> <div>Download</div> </a></div>  |
 
 #### 🥳+🍔 Public e-editiones / TEI Publisher Get Together at Rocklands BBQ
-* When: **Wednesday 7th of August 7:00 PM – 9:30 PM EST**
-* Where: [Rocklands BBQ](https://rocklands.com/locations/arlington-va/) - souther style cusine - at [3471 Washington Blvd. Arlington, VA 22201](https://maps.app.goo.gl/VqqA6XEUmabFegHD9).
-* Event on [Whova](https://whova.com/portal/webapp/dh_202407/CommunityBoard/topic/2122044/23825496/) and [LinkedIn](https://www.linkedin.com/events/publice-editiones-teipublisherg7226237273892093955/about/)
+On Wednesday 7th of August we had a nice get together at Rocklands BBQ. 
 
-🚀 Are you a TEI Publisher user who wants to connect with other users? Do you wanna know more about e-editiones and meet some of our members in person? Then join us for the Get-Together Wednesday evening.
+**Show 1-2 photos?** 
 
-💡 Whether you're a beginner or an expert, this event is the perfect opportunity to exchange tips & tricks an get to know each other. You don't need to be a DH2024 participant to join and no registration is required. Just come by. Its only 6 minutes by foot away from the DH2024 venue.
-
-#### 🏞️ Poster Session II -  Reinvention, Responsibility & Resurrection: how to future-proof an edition
-* When: **Friday 9th of August 2:00 PM - 3:30 PM EST**
-* Who: Magdalena Turska, Helena Bermudez Sabel
-* Where: Van Metre Hall 125
-* [Whova Link](https://whova.com/portal/webapp/dh_202407/Artifact/108353)
+##### 🏞️ Poster Session II -  Reinvention, Responsibility & Resurrection: how to future-proof an edition
+*Magdalena Turska, Helena Bermudez Sabel*
+| | |
+| ------------ | ------------- |
+| As software developers and technical editors we find ourselves frequently called in to resurrect a project in danger of extinction. We will discuss experiences and solutions for such a reconstruction/reinvention process which led to creation of a future-proof open publication model based on standards, already implemented in many projects, including Swiss national infrastructure Sources Online. | <div class="download-flyer"> <a href='/assets/files/DH2024-future-proof-an-edition.pdf'> <img src='../img/DH2024-future-proof-an-edition.jpg' width='100%'> <div>Download</div> </a></div>  |
 
 ### 📓 Editions with Future 
 Read more about [e-editiones and TEI Publisher](/join).
