Correct dh2024.md

--- a/dh2024.md
+++ b/dh2024.md
@@ -11,20 +11,20 @@ tags:
     - e-editiones
 --- 
 
-From August 6 till 9, 2024 several e-editiones members joined the annual conference of the Alliance of Digital Humanities Organizations: [DH2024 - Reinvention & Responsibility](https://dh2024.adho.org/) at Washington, D.C., 🇺🇸. Below you find the posters and presentation our members contributed to the conference. 
+From August 6 till 9, 2024 several e-editiones members joined the annual conference of the Alliance of Digital Humanities Organizations: [DH2024 - Reinvention & Responsibility](https://dh2024.adho.org/) in Washington, D.C., 🇺🇸. You can find below all the posters and presentation our members contributed to the conference. 
 
 ##### 🎤 From a publishing tool to a virtual research environment: producing scholarly editions with TEl Publisher 
 *Joseph C Wicentowski, Magdalena Turska, Helena Bermudez Sabel, Wolfgang Meier*
 
 > TEI Publisher provides the means for data storage, modelling, curation, analysis and visualisation while enabling collaborative work. The recent additions to it include form-based editing for metadata and curation of authority files as well as NER support, including training the model and visual editor for adding semantic markup.
 
-Currently we cann offer only the [presentation](https://prezi.com/view/oNGhA5fu4Nvpp3uiKC5o/). Due to a [technical glitch](https://social.e-editiones.org/@eeditiones/112921400019070395) there is no recording of this talk. We will have the talk again in one of our upcoming remote e-editiones [community meetings](/pages/community-meetings/). Subscribe to our [mailing list](https://www.e-editiones.org/pages/get-in-touch#mailing-list), join our [Slack organisation](https://www.e-editiones.org/pages/get-in-touch#slack-community), follow us on [LinkedIn](https://www.linkedin.com/company/e-editiones), [Mastodon](https://social.e-editiones.org/@eeditiones) or [Twitter](https://x.com/eeditiones) to be notified the date / time. 
+Currently we can offer only the [presentation](https://prezi.com/view/oNGhA5fu4Nvpp3uiKC5o/). Due to a [technical glitch](https://social.e-editiones.org/@eeditiones/112921400019070395) there is no recording of this talk. We will have the talk again in one of our upcoming online e-editiones [community meetings](/pages/community-meetings/). Subscribe to our [mailing list](https://www.e-editiones.org/pages/get-in-touch#mailing-list), join our [Slack organisation](https://www.e-editiones.org/pages/get-in-touch#slack-community), follow us on [LinkedIn](https://www.linkedin.com/company/e-editiones), [Mastodon](https://social.e-editiones.org/@eeditiones) or [Twitter](https://x.com/eeditiones) to be notified about the date and time. 
 
 
 ##### 🏞️ Poster Session I 
 
 ###### Publishing Process for Digital Scholarly Editing: Jagiellonian Digital Platform 
-*Joanna Katarzyna Hałackiewicz,  Iwona Grabska-Gradzinska, Magdalena Eulalia Komorowska, Magdalena Turska* 
+*Joanna Katarzyna Hałaczkiewicz,  Iwona Grabska-Gradzinska, Magdalena Eulalia Komorowska, Magdalena Turska* 
 <style>
 td, th {
    border: none!important;
