added images from e-editiones get-together

--- a/dh2024.md
+++ b/dh2024.md
@@ -48,7 +48,9 @@ td, th {
 #### 🥳+🍔 Public e-editiones / TEI Publisher Get Together at Rocklands BBQ
 On Wednesday 7th of August we had a nice get together at Rocklands BBQ. 
 
-**Show 1-2 photos?** 
+| | |
+| ------------ | ------------- |
+| <div> <a href='../img/dh2024-get-together2.jpg'> <img src='../img/dh2024-get-together2-small.jpg' width='100%'></a></div>| <div> <a href='../img/dh2024-get-together1.jpg'> <img src='../img/dh2024-get-together1-small.jpg' width='100%'></a></div>  |
 
 ##### 🏞️ Poster Session II -  Reinvention, Responsibility & Resurrection: how to future-proof an edition
 *Magdalena Turska, Helena Bermudez Sabel*
