[wip] e-editiones / tp at tei conf 2025

--- a/posts/tei2025.md
+++ b/posts/tei2025.md
@@ -14,8 +14,9 @@ coverImageCredits: Cover image by Juri Leino and ChatGPT
 
 
 ---
-From September 16 till 20, 2025 many e-editiones members will join the TEI Annual Conference and Members’ Meeting 2025 [**TEI2025 - New Territories**](https://tei2025.confer.uj.edu.pl/) in  [Kraków, Poland 🇵🇱](https://www.openstreetmap.org/relation/2768922) at the [Jagiellonian University](https://www.uj.edu.pl/). 
+From September 16 to 20 e-editiones members will meet at this year's TEI Annual Conference and Members’ Meeting [**TEI2025 - New Territories**](https://tei2025.confer.uj.edu.pl/) in [Kraków, Poland 🇵🇱](https://www.openstreetmap.org/relation/2768922) at the [Jagiellonian University](https://www.uj.edu.pl/). 
 
-To easily find e-editiones / TEI Publisher related content at the conference we compiled this [list of e-editiones / TEI Publisher related activieties](https://e-editiones.org/tei2025) and created a public #TEI2025 channel in the [e-editiones Slack workspace](https://join.slack.com/t/e-editiones/shared_invite/zt-e19jc03q-OFaVni~_lh6emSHen6pswg). 
+To easily find e-editiones / TEI Publisher related content at the conference we compiled this [list of e-editiones / TEI Publisher related activieties](/tei2025) and created a public #TEI2025 channel in the [e-editiones Slack workspace](https://join.slack.com/t/e-editiones/shared_invite/zt-e19jc03q-OFaVni~_lh6emSHen6pswg). 
+
 
 We wish all participants a wonderful TEI2025! 
