--- a/tei2025.md
+++ b/tei2025.md
@@ -11,7 +11,7 @@ tags:
     - e-editiones
 --- 
 
-From September 16 till 20, 2025 many e-editiones members will join the TEI Annual Conference and Members’ Meeting 2025 [**TEI2025 - New Territories**](https://tei2025.confer.uj.edu.pl/) in  [Kraków, Poland 🇵🇱](https://www.openstreetmap.org/relation/2768922) at the [Jagiellonian University](https://www.uj.edu.pl/). Further below, you will find a list of all short and long papers, demonstrations, and workshops that either focus on TEI Publisher or involve members of e-editiones. If we have overlooked an event, please feel free to send us an [email](mailto:info@e-editiones.org).
+From September 16 to 20 e-editiones members will meet at this year's TEI Annual Conference and Members’ Meeting [**TEI2025 - New Territories**](https://tei2025.confer.uj.edu.pl/) in [Kraków, Poland 🇵🇱](https://www.openstreetmap.org/relation/2768922) at the [Jagiellonian University](https://www.uj.edu.pl/). Further below, you will find a list of all short and long papers, demonstrations, and workshops that either focus on TEI Publisher or involve members of e-editiones. If we have overlooked an event, please feel free to send us an [email](mailto:info@e-editiones.org).
 
 ##### Workshop: TEI Processing Model
 *Helena Bermúdez Sabel (JinnTec), Magdalena Turska (e-editiones), [Tuesday, 16/Sept/2025 9:30am - 11:00am at Collegium Paderevianum 402](https://www.conftool.pro/tei2025/index.php?page=browseSessions&print=embed&form_session=32&presentations=show)*
