e-editiones at tei2025 - added image

--- a/tei2025.md
+++ b/tei2025.md
@@ -11,7 +11,17 @@ tags:
     - e-editiones
 --- 
 
-From September 16 to 20 e-editiones members will meet at this year's TEI Annual Conference and Members’ Meeting [**TEI2025 - New Territories**](https://tei2025.confer.uj.edu.pl/) in [Kraków, Poland 🇵🇱](https://www.openstreetmap.org/relation/2768922) at the [Jagiellonian University](https://www.uj.edu.pl/). Further below, you will find a list of all short and long papers, demonstrations, and workshops that either focus on TEI Publisher or involve members of e-editiones. If we have overlooked an event, please feel free to send us an [email](mailto:info@e-editiones.org).
+<table>
+    <tr>
+        <td width="50%"><img src="/img/tei2025-new-territories.png" alt="This re-mix image was done by Lars Windauer (e-editiones). The background picture shows Copernicus Sentinel data (2019) by ESA, image is under ESA Standard License: https://www.esa.int/ESA_Multimedia/Terms_and_conditions_of_use_of_images_and_videos_available_on_the_esa_website. The TEI Logo is under Creative Commons CC BY 4.0 license and taken from https://tei-c.org/about/logos/" width="100%"/></td>    
+        <td width="50%">
+            From September 16 to 20 e-editiones members will meet at this year's TEI Annual Conference and Members’ Meeting <a href="https://tei2025.confer.uj.edu.pl/">TEI2025 - New Territories</a> in <a href="https://www.openstreetmap.org/relation/2768922">Kraków, Poland 🇵🇱</a> at the <a href="https://www.uj.edu.pl/">Jagiellonian University</a>. <br/>
+            Below, you will find a list of all short and long papers, demonstrations, and workshops that either focus on TEI Publisher or involve members of e-editiones. If we have overlooked an event, please feel free to send us an [email](mailto:info@e-editiones.org).
+        </td>
+    </tr>
+</table>
+
+
 
 ##### Workshop: TEI Processing Model
 *Helena Bermúdez Sabel (JinnTec), Magdalena Turska (e-editiones), [Tuesday, 16/Sept/2025 9:30am - 11:00am at Collegium Paderevianum 402](https://www.conftool.pro/tei2025/index.php?page=browseSessions&print=embed&form_session=32&presentations=show)*
