--- a/posts/tei2025.md
+++ b/posts/tei2025.md
@@ -9,14 +9,19 @@ tags:
   - TEIConf
   - tei-publisher
   - e-editiones
-coverImage: /img/dh24-eeditiones-flyer-cover-image.jpg
-coverImageCredits: Cover image by Juri Leino and ChatGPT
+coverImage: /img/tei2025-new-territories.png
+coverImageCredits: "This re-mix image was done by Lars Windauer (e-editiones). The background picture shows Copernicus Sentinel data (2019) by ESA, image is under ESA Standard License: https://www.esa.int/ESA_Multimedia/Terms_and_conditions_of_use_of_images_and_videos_available_on_the_esa_website. The TEI Logo is under Creative Commons CC BY 4.0 license and taken from https://tei-c.org/about/logos/"
 
 
 ---
 From September 16 to 20 e-editiones members will meet at this year's TEI Annual Conference and Members’ Meeting [**TEI2025 - New Territories**](https://tei2025.confer.uj.edu.pl/) in [Kraków, Poland 🇵🇱](https://www.openstreetmap.org/relation/2768922) at the [Jagiellonian University](https://www.uj.edu.pl/). 
 
 To easily find e-editiones / TEI Publisher related content at the conference we compiled this [list of e-editiones / TEI Publisher related activieties](/tei2025) and created a public #TEI2025 channel in the [e-editiones Slack workspace](https://join.slack.com/t/e-editiones/shared_invite/zt-e19jc03q-OFaVni~_lh6emSHen6pswg). 
+
+<figure>
+    <a href="/tei2025"><img src="/img/tei2025-new-territories.png" alt="This re-mix image was done by Lars Windauer (e-editiones). The background picture shows Copernicus Sentinel data (2019) by ESA, image is under ESA Standard License: https://www.esa.int/ESA_Multimedia/Terms_and_conditions_of_use_of_images_and_videos_available_on_the_esa_website. The TEI Logo is under Creative Commons CC BY 4.0 license and taken from https://tei-c.org/about/logos/" width="100%"/></a>    
+</figure>
+
 
 
 We wish all participants a wonderful TEI2025! 
