e-editiones at tei2025 - enhanced image

--- a/posts/tei2025.md
+++ b/posts/tei2025.md
@@ -10,7 +10,7 @@ tags:
   - tei-publisher
   - e-editiones
 coverImage: /img/tei2025-new-territories.png
-coverImageCredits: "This re-mix image was done by Lars Windauer (e-editiones). The background picture shows Copernicus Sentinel data (2019) by ESA, image is under ESA Standard License: https://www.esa.int/ESA_Multimedia/Terms_and_conditions_of_use_of_images_and_videos_available_on_the_esa_website. The TEI Logo is under Creative Commons CC BY 4.0 license and taken from https://tei-c.org/about/logos/"
+coverImageCredits: "This re-mix image was done by L. Windauer (e-editiones). The background picture shows Copernicus Sentinel data (2019) by ESA, image is under ESA Standard License: https://www.esa.int/ESA_Multimedia/Terms_and_conditions_of_use_of_images_and_videos_available_on_the_esa_website. The TEI Logo is under Creative Commons CC BY 4.0 license and taken from https://tei-c.org/about/logos/. The 'new territories' logo was done by Patrycja Wojkowska."
 
 
 ---
@@ -19,7 +19,7 @@ From September 16 to 20 e-editiones members will meet at this year's TEI Annual 
 To easily find e-editiones / TEI Publisher related content at the conference we compiled this [list of e-editiones / TEI Publisher related activieties](/tei2025) and created a public #TEI2025 channel in the [e-editiones Slack workspace](https://join.slack.com/t/e-editiones/shared_invite/zt-e19jc03q-OFaVni~_lh6emSHen6pswg). 
 
 <figure>
-    <a href="/tei2025"><img src="/img/tei2025-new-territories.png" alt="This re-mix image was done by Lars Windauer (e-editiones). The background picture shows Copernicus Sentinel data (2019) by ESA, image is under ESA Standard License: https://www.esa.int/ESA_Multimedia/Terms_and_conditions_of_use_of_images_and_videos_available_on_the_esa_website. The TEI Logo is under Creative Commons CC BY 4.0 license and taken from https://tei-c.org/about/logos/" width="100%"/></a>    
+    <a href="/tei2025"><img src="/img/tei2025-new-territories.png" alt="This re-mix image was done by L. Windauer (e-editiones). The background picture shows Copernicus Sentinel data (2019) by ESA, image is under ESA Standard License: https://www.esa.int/ESA_Multimedia/Terms_and_conditions_of_use_of_images_and_videos_available_on_the_esa_website. The TEI Logo is under Creative Commons CC BY 4.0 license and taken from https://tei-c.org/about/logos/. The 'new territories' logo was done by Patrycja Wojkowska." width="100%"/></a>    
 </figure>
 
 
