--- a/tei2025.md
+++ b/tei2025.md
@@ -13,7 +13,7 @@ tags:
 
 <table>
     <tr>
-        <td width="50%"><img src="/img/tei2025-new-territories.png" alt="This re-mix image was done by Lars Windauer (e-editiones). The background picture shows Copernicus Sentinel data (2019) by ESA, image is under ESA Standard License: https://www.esa.int/ESA_Multimedia/Terms_and_conditions_of_use_of_images_and_videos_available_on_the_esa_website. The TEI Logo is under Creative Commons CC BY 4.0 license and taken from https://tei-c.org/about/logos/" width="100%"/></td>    
+        <td width="50%"><img src="/img/tei2025-new-territories.png" alt="This re-mix image was done by L. Windauer (e-editiones). The background picture shows Copernicus Sentinel data (2019) by ESA, image is under ESA Standard License: https://www.esa.int/ESA_Multimedia/ Terms_and_conditions_of_use_of_images_and_videos_available_on_the_esa_website. The TEI Logo is under Creative Commons CC BY 4.0 license and taken from https://tei-c.org/about/logos/. The 'new territories' logo was done by Patrycja Wojkowska." width="100%"/></td>
         <td width="50%">
             From September 16 to 20 e-editiones members will meet at this year's TEI Annual Conference and Members’ Meeting <a href="https://tei2025.confer.uj.edu.pl/">TEI2025 - New Territories</a> in <a href="https://www.openstreetmap.org/relation/2768922">Kraków, Poland 🇵🇱</a> at the <a href="https://www.uj.edu.pl/">Jagiellonian University</a>. <br/>
             Below, you will find a list of all short and long papers, demonstrations, and workshops that either focus on TEI Publisher or involve members of e-editiones. If we have overlooked an event, please feel free to send us an [email](mailto:info@e-editiones.org).
