Add links to presentations from TEI 2025

--- a/tei2025.md
+++ b/tei2025.md
@@ -28,13 +28,19 @@ tags:
   
 > Crossing the divide between richly encoded XML sources and tangible, published digital edition has always been a weak spot for TEI community. The **TEI Simple** project aimed to bridge that gap with TEI Processing Model idea. 
 
+[GitHub page](https://github.com/eeditiones/workshop/blob/master/2025-09_tei-conference-2025.md)
+
 ##### Workshop: Jinks / TEI Publisher 10
 *Magdalena Turska (e-editiones), [Tuesday, 16/Sept/2025 2:30pm - 6:00pm at Collegium Paderevianum 402](https://www.conftool.pro/tei2025/index.php?page=browseSessions&print=embed&form_session=33&presentations=show)*
   
 > TEI Publisher 10 is also the 10th, anniversary edition and it marks a decade since the first Publisher presentation (and our first workshop) at the TEI conference in Lyon. The Jinks application is an edition builder to create, tailor and update editions to your needs in minutes.
 
+[GitHub page](https://github.com/eeditiones/workshop/blob/master/2025-09-krakow.md) 
+
 ##### Long Paper: Haute couture for the masses
 *Magdalena Turska (e-editiones), Wednesday, 17/Sept/2025 09:30am - 10:00am at Collegium Paderevianum 505*
+
+[Presentation](https://bit.ly/haute-couture-2025)
 
 ##### Long Paper: From Practice to Framework: Model Digital Scholarly Editions in the Jagiellonian Digital Platform
 
@@ -49,6 +55,8 @@ tags:
 
 *B. Lehečka (Moravian Library in Brno, Czech Republic), Thursday, 18/Sept/2025 09:45am - 10:15am at Collegium Paderevianum 505*
 
+[Presentation](https://www.daliboris.cz/materials/tei/2025/Lehecka-Converting-to-TEI-2025-09-18.pdf))
+
 ##### Demonstration: JinnTap: A browser-based TEI-XML editor
 *W. Meier (e-editiones, Heidelberger Akademie der Wissenschaften, JinnTec), L. Windauer (e-editiones, JinnTec), J. Wicentowski (Office of the Historian, USA), Thursday, 18/Sept/2025 10:45am - 11:00am at Collegium Paderevianum 505*
 
@@ -58,6 +66,13 @@ tags:
 
 ##### Demonstration: Enriching textual data from digital libraries
 *B. Lehečka (Moravian Library in Brno, Czech Republic), Friday, 19/Sept/2025 10:15am - 10:30am at Collegium Paderevianum 402*
+
+[Presentation](https://www.daliboris.cz/materials/tei/2025/Lehecka-Enriching-DL-2025-09-19.pdf)
+
+
+### Zenodo community for the 25th Annual Meeting of the Text Encoding Initiative, Kraków 2025
+
+[link](https://zenodo.org/communities/tei2025)
 
 ### 📓 Editions with Future 
 Read more about [e-editiones and TEI Publisher](/join).
