added jinntap video

--- a/tei2025.md
+++ b/tei2025.md
@@ -14,14 +14,14 @@ tags:
 <table>
     <tr>
         <td width="50%"><img src="/img/tei2025-new-territories.png" alt="This re-mix image was done by L. Windauer (e-editiones). The background picture shows Copernicus Sentinel data (2019) by ESA, image is under ESA Standard License: https://www.esa.int/ESA_Multimedia/ Terms_and_conditions_of_use_of_images_and_videos_available_on_the_esa_website. The TEI Logo is under Creative Commons CC BY 4.0 license and taken from https://tei-c.org/about/logos/. The 'new territories' logo was done by Patrycja Wojkowska." width="100%"/></td>
-        <td width="50%">
-            From September 16 to 20 e-editiones members will meet at this year's TEI Annual Conference and Members’ Meeting <a href="https://tei2025.confer.uj.edu.pl/">TEI2025 - New Territories</a> in <a href="https://www.openstreetmap.org/relation/2768922">Kraków, Poland 🇵🇱</a> at the <a href="https://www.uj.edu.pl/">Jagiellonian University</a>. <br/>
-            Below, you will find a list of all short and long papers, demonstrations, and workshops that either focus on TEI Publisher or involve members of e-editiones. If we have overlooked an event, please feel free to send us an <a href="mailto:info@e-editiones.org">email</a>.
+        <td width="50%" style="vertical-align:top;">
+            From September 16 to 20 e-editiones members will meet at this year's TEI Annual Conference and Members’ Meeting <a href="https://tei2025.confer.uj.edu.pl/">TEI2025 - New Territories</a> in <a href="https://www.openstreetmap.org/relation/2768922">Kraków, Poland 🇵🇱</a> at the <a href="https://www.uj.edu.pl/">Jagiellonian University</a>.
         </td>
     </tr>
 </table>
-
-
+<div style="align:top">
+Below, you will find a list of all short and long papers, demonstrations, and workshops that either focus on TEI Publisher or involve members of e-editiones. If we have overlooked an event, please feel free to send us an <a href="mailto:info@e-editiones.org">email</a>.
+</div>
 
 ##### Workshop: TEI Processing Model
 *Helena Bermúdez Sabel (JinnTec), Magdalena Turska (e-editiones), [Tuesday, 16/Sept/2025 9:30am - 11:00am at Collegium Paderevianum 402](https://www.conftool.pro/tei2025/index.php?page=browseSessions&print=embed&form_session=32&presentations=show)*
@@ -55,10 +55,13 @@ tags:
 
 *B. Lehečka (Moravian Library in Brno, Czech Republic), Thursday, 18/Sept/2025 09:45am - 10:15am at Collegium Paderevianum 505*
 
-[Presentation](https://www.daliboris.cz/materials/tei/2025/Lehecka-Converting-to-TEI-2025-09-18.pdf))
+[Presentation](https://www.daliboris.cz/materials/tei/2025/Lehecka-Converting-to-TEI-2025-09-18.pdf)
 
 ##### Demonstration: JinnTap: A browser-based TEI-XML editor
 *W. Meier (e-editiones, Heidelberger Akademie der Wissenschaften, JinnTec), L. Windauer (e-editiones, JinnTec), J. Wicentowski (Office of the Historian, USA), Thursday, 18/Sept/2025 10:45am - 11:00am at Collegium Paderevianum 505*
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SpE1bg6OmwE?si=LnaXdzwlUfT10Tsa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 
 ##### Short Paper: Structures and Tools for the Representation and Visualization of Knowledge Contained in Electronic Editions/Textual Resources
 
