added links to workshop resources

--- a/dhd2026.md
+++ b/dhd2026.md
@@ -96,6 +96,14 @@ Wer den eigenen Rechner verwenden möchte, kann dies gerne tun.
 Bitte [folgt dafür der Installationsanleitung des TEI Publishers](https://tei-publisher.com/doc/tldr.xml?id=installation#installation). Damit habt ihr alles eingerichtet, was für die Teilnahme am Workshop benötigt wird.
 
 
+#####  Ressourcen für den Workshop
+
+* [Workshop-Foliensatz (PDF)](https://raw.githubusercontent.com/eeditiones/workshop/8100af278370ef2a41b686d6e844ee123719f94b/slides/dhd-20260224.pdf)
+* [Bilder für die praktische Übung](https://github.com/eeditiones/workshop/tree/master/images)
+* TEI Publisher Dokumentation 
+   * [Gentle Introduction to TEI Publisher (Quickstart)](https://tei-publisher.com/doc/quickstart.xml)
+   * [Reference Manual (vollständige Dokumentation)](https://tei-publisher.com/doc/documentation.xml)
+
 ##### Remote-Unterstützung
 
 Aufgrund der hohen Teilnehmer:innenzahl sowie krankheitsbedingter Ausfälle können wir nicht mit so vielen Personen vor Ort in Wien sein, wie wir es gerne wären.
